Fixed the layout Hero section overflow issue.

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -4,12 +4,10 @@
     justify-content: center;
     gap: 20px;
     text-align: center;
-    height: 100dvh;
+    height: 100%;
     min-height: 500px;
-
-    .hero {
-        max-width: 200px;
-    }
+    padding-top: 20px;
+    padding-inline: 20px;
 
     span {
         display: flex;
@@ -33,19 +31,50 @@
 
 .colorModeContainer {
     position: relative;
-}
 
-.colorMode {
-    position: absolute;
-    right: 5;
-    width: 25px;
-}
+    .hero {
+        max-width: 200px;
+    }
 
-.colorMode:hover {
-    cursor: pointer;
+    .colorMode {
+        position: absolute;
+        right: 0;
+        width: 25px;
+    }
+    
+    .colorMode:hover {
+        cursor: pointer;
+    }
 }
 
 .description {
-    max-width: 35ch;
+    max-width: 100%;
 }
 
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+@media (width >= 800px) {
+    .container {
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-evenly;
+        
+        .hero {
+            max-width: 350px;
+            width: 350px;
+        }
+    }
+}
+
+@media (width >= 1400px) {
+    .container {
+        .hero {
+            max-width: 400px;
+            width: 400px;
+        }
+    }
+}
